Adding a logo and some content

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,21 @@
+/*
+Forground:
+#292D32
+
+Background: 
+#000000
+ 
+Accent 1
+#E8E0CD
+ 
+Accent 2
+#FFC114
+ 
+Accent 3
+#4C4944
+*/
+
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
